--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,11 +4,14 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Kennedy Jewelries and Accessories</title>
+    <title>
+        <%= title %>
+    </title>
 </head>
 <body>
-    <div id="nav-container" class="d-flex justify-content-center flex-column"></div>
-    <%- body %>
-    <script type="text/javascript" src="/main.js"></script>
+<div id="nav-container" class="d-flex justify-content-center flex-column"></div>
+<%- body %>
+<%- include footer.ejs %>
+<script type="text/javascript" src="/main.js"></script>
 </body>
 </html>
