--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,11 @@
-<div class="w-100 h-100 bg-black d-flex justify-content-center align-items-center flex-mobile-column" id="landing-banner">
-    <div class="d-flex justify-content-center align-items-center flex-grow">
-        <img src="./images/watch01-sm.png"/>
-    </div>
-    <div class=" d-flex justify-content-center text-white flex-column flex-grow link-plain">
-        <h1 class="display-2 font-pacifico my-4">Exquisite. Sophisticated.</h1>
-        <h4 class="w-75 line-height-2">
+<div class="w-100 h-100 bg-black d-flex justify-content-center align-items-center wrap-20" id="landing-banner">
+    <div class="d-flex justify-content-center  align-items-center text-white flex-column link-plain">
+        <h1 class="text-emphasize font-pacifico my-4">Redefine Sophisticated</h1>
+        <h4 class="w-40-70-100 line-height-2 text-align-center-lg">
             Proin ex turpis, ornare vitae lorem ut, mattis tempus augue. Nam non placerat eros, ut finibus dolor.
             Nulla ornare, mi id efficitur blandit, dui metus porta velit, a fermentum libero arcu eu lectus.
         </h4>
         <a href="#" class="btn-input-lg text-white btn-outline-white
-                           w-40-70 my-4 font-weight-bold">See our collections</a>
+                           w-25-70-100 my-4 font-weight-bold">See our collections</a>
     </div>
 </div>
