--- a/src/assets/styles/_globals.scss
+++ b/src/assets/styles/_globals.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat|Open+Sans|Pacifico|Righteous');
+@import url('https://fonts.googleapis.com/css?family=Montserrat|Open+Sans:400,700|Pacifico|Righteous');
 @import "~bootstrap/dist/css/bootstrap.min.css";
 @import "~@fortawesome/fontawesome-free/css/all.min.css";
 @import "scss/fontawesome";
