--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,5 @@
+<!--https://unsplash.com/photos/mId2gG0a9GU-->
+<!--https://unsplash.com/photos/nXruwpNrOzQ-->
 <div class="w-100 h-100 bg-black d-flex justify-content-center align-items-center wrap-20" id="landing-banner">
     <div class="d-flex justify-content-center  align-items-center text-white flex-column link-plain">
         <h1 class="text-emphasize font-pacifico my-4">Redefine Sophisticated</h1>
@@ -9,3 +11,20 @@
                            w-25-70-100 my-4 font-weight-bold">See our collections</a>
     </div>
 </div>
+<div class="d-flex justify-content-center align-self-center p-5 h-auto flex-column">
+    <div class="d-flex justify-content-center align-items-center flex-column">
+        <h2 class="section-header">Witness Extravagance</h2>
+        <p class="section-desc">With the standouts from 2018 </p>
+        <div class="d-flex justify-content-center align-items-center w-75-100 mb-5 link-plain">
+            <a href="#" class="btn-input-lg text-white bg-black btn-outline-dark
+                           w-25-70-100 font-weight-bold mx-2 text-uppercase">shop men's</a>
+            <a href="#" class="btn-input-lg text-white bg-black btn-outline-dark
+                           w-25-70-100 font-weight-bold mx-2 text-uppercase">shop women's</a>
+        </div>
+    </div>
+    <div class="d-flex justify-content-center align-content-center flex-mobile-column mt-4" id="featured-collections">
+
+    </div>
+</div>
+
+<script type="text/javascript" src="/index.js"></script>
