--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,6 +7,14 @@
     <title>
         <%= title %>
     </title>
+    <style type="text/css">
+        .no-flash {
+            display: none;
+        }
+    </style>
+    <script type="text/javascript">
+        document.documentElement.className = 'no-flash';
+    </script>
 </head>
 <body>
 <div id="nav-container" class="d-flex justify-content-center flex-column"></div>
