--- a/src/assets/styles/BackgroundColors.scss
+++ b/src/assets/styles/BackgroundColors.scss
@@ -4,6 +4,10 @@
   background-color: black;
 }
 
+.bg-dirty-white {
+  background-color: $dirty-white;
+}
+
 .bg-transparent {
   background-color: transparent;
 }
