--- a/src/assets/styles/Images.scss
+++ b/src/assets/styles/Images.scss
@@ -7,3 +7,11 @@
     width: 350px;
   }
 }
+
+.image-200-75p {
+  width: 75%;
+  height: auto;
+  @include respond-to(desktop-up) {
+    width: 200px;
+  }
+}
