--- a/src/assets/styles/_globals.scss
+++ b/src/assets/styles/_globals.scss
@@ -8,6 +8,7 @@
 /* Colors */
 $mat-blue: #0d47a1;
 $color-second-level-link: #9b9e9f;
+$dirty-white: #f7f8f9;
 
 /* Fonts */
 $font-righteous: 'Righteous', cursive;
