Update components and styles

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
                            w-25-70-100 font-weight-bold mx-2 text-uppercase">shop women's</a>
         </div>
     </div>
-    <div class="d-flex justify-content-center align-content-center flex-mobile-column mt-4" id="featured-collections">
+    <div class="mt-4 card-container" id="featured-collections">
     </div>
 </div>
 <div class="d-flex justify-content-center align-self-center p-5 h-auto flex-column bg-white">
@@ -32,68 +32,8 @@
             stuff better, we’re driven to create custom built products that reflect our unique point of view, our
             heritage, our style, and we don’t stop until we get it right </p>
     </div>
-    <div class="d-flex justify-content-center align-content-center flex-mobile-column mt-4 kenny-container">
-        <div class="kennedy-card">
-            <div class="card-image">
-                <img src="/images/w03.webp" class="image-200-75p"
-                     alt="watch name"/>
-                <!--https://images.unsplash.com/photo-1513030096020-0f240ba3ae8b?ixlib=-->
-                <!--rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80-->
-                <!--"https://images.unsplash.com/photo-1451859757691-f318d641ab4d?ixlib=-->
-                <!--rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"-->
+    <div class="card-container mt-4 kenny-container" id="featured-watches">
 
-            </div>
-            <div class="card-content">
-                <h5 class="card-content-header"><a href="#" class="link-plain">Card Title</a></h5>
-                <p class="card-content-text">Pellentesque volutpat nisl eu molestie ultricies.</p>
-            </div>
-        </div>
-        <div class="kennedy-card">
-            <div class="card-image">
-                <img src="/images/w02.webp" class="image-200-75p"
-                     alt="watch name"/>
-                <!--https://images.unsplash.com/photo-1513030096020-0f240ba3ae8b?ixlib=-->
-                <!--rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80-->
-                <!--"https://images.unsplash.com/photo-1451859757691-f318d641ab4d?ixlib=-->
-                <!--rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"-->
-
-            </div>
-            <div class="card-content">
-                <h5 class="card-content-header"><a href="#" class="link-plain">Card Title</a></h5>
-                <p class="card-content-text">Pellentesque volutpat nisl eu molestie ultricies.</p>
-            </div>
-        </div>
-        <div class="kennedy-card">
-            <div class="card-image">
-                <img src="/images/w05.webp" class="image-200-75p"
-                     alt="watch name"/>
-                <!--https://images.unsplash.com/photo-1513030096020-0f240ba3ae8b?ixlib=-->
-                <!--rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80-->
-                <!--"https://images.unsplash.com/photo-1451859757691-f318d641ab4d?ixlib=-->
-                <!--rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"-->
-
-            </div>
-            <div class="card-content">
-                <h5 class="card-content-header"><a href="#" class="link-plain">Card Title</a></h5>
-                <p class="card-content-text">Pellentesque volutpat nisl eu molestie ultricies.</p>
-            </div>
-        </div>
-        <div class="kennedy-card">
-            <div class="card-image">
-                <img src="/images/w04.webp" class="image-200-75p"
-                     alt="watch name"/>
-                <!--https://images.unsplash.com/photo-1513030096020-0f240ba3ae8b?ixlib=-->
-                <!--rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80-->
-                <!--"https://images.unsplash.com/photo-1451859757691-f318d641ab4d?ixlib=-->
-                <!--rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"-->
-
-            </div>
-            <div class="card-content">
-                <h5 class="card-content-header"><a href="#" class="link-plain">Card Title</a></h5>
-                <p class="card-content-text">Pellentesque volutpat nisl eu molestie ultricies.</p>
-            </div>
-        </div>
-    </div>
     </div>
 </div>
 
