--- a/src/assets/styles/Text.scss
+++ b/src/assets/styles/Text.scss
@@ -27,6 +27,10 @@
   font-family: $font-montserrat;
 }
 
+.font-small {
+  font-size: 11px !important;
+}
+
 .line-height-2 {
   line-height: 2.5rem;
 }
@@ -67,4 +71,8 @@
   @include respond-to(desktop-up) {
     line-height: 18px;
   }
+}
+/* Coloring */
+.text-kenny-black {
+  color: $kenny-black;
 }
