--- a/src/assets/styles/Wrappers.scss
+++ b/src/assets/styles/Wrappers.scss
@@ -54,14 +54,14 @@
 /* Width Wrappers */
 .w-40-70 {
   width: 70%;
-  @include respond-to(tablet-portrait-up){
+  @include respond-to(tablet-portrait-up) {
     width: 40%;
   }
 }
 
 .w-75-100 {
   width: 100%;
-  @include respond-to(tablet-portrait-up){
+  @include respond-to(tablet-portrait-up) {
     width: 75%;
   }
 }
@@ -112,6 +112,7 @@
   text-align: center;
   max-width: 100%;
   min-height: 320px;
+
   &:hover {
     & .card-image {
       & > img {
@@ -119,6 +120,7 @@
       }
     }
   }
+
   & .card-image {
     & > img {
       -webkit-transition: transform 0.3s ease-in-out;
@@ -128,30 +130,47 @@
       transition: transform 0.3s ease-in-out;
       object-fit: cover;
     }
+
     &:hover {
       & > img {
         transform: scale3d(1.1, 1.1, 1.1);
       }
     }
   }
+
   & .card-content {
     padding-top: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
     & .card-content-header {
-      & > a {
-        color: #acb1b4 !important;
-        font-size: 11px;
-      }
+      color: #acb1b4 !important;
+      font-size: 11px;
+      font-weight: bold;
     }
+
     & > .card-content-text {
       text-transform: uppercase;
+      color: black !important;
+      & a {
+        color: black;
+      }
     }
   }
 
   @include respond-to(desktop-up) {
     max-width: 350px;
+  }
+}
+
+.card-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  @include respond-to(tablet-landscape-up) {
+    flex-direction: row;
   }
 }
