--- a/src/assets/styles/components/Navbar.scss
+++ b/src/assets/styles/components/Navbar.scss
@@ -11,6 +11,14 @@
   }
 }
 
+.kenny-nav {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  transition: background-color 0.4s ease-in-out;
+  z-index: 8;
+}
+
 .navigation {
   & .navigation-mega-item {
     &:hover {
