--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,16 +25,33 @@
     <div class="mt-4 card-container" id="featured-collections">
     </div>
 </div>
-<div class="d-flex justify-content-center align-self-center p-5 h-auto flex-column bg-white">
+<div class="d-flex justify-content-center align-self-center py-5 h-auto flex-column bg-white">
     <div class="d-flex justify-content-center align-items-center flex-column text-center wrap-top-30">
         <h2 class="section-header text-uppercase">Kennedy Essentials</h2>
-        <p class="section-desc w-40-70-100 transform-none text-muted line-height-18-26">Focused on making the little
-            stuff better, we’re driven to create custom built products that reflect our unique point of view, our
-            heritage, our style, and we don’t stop until we get it right </p>
+        <p class="section-desc w-40-70-100 transform-none text-muted line-height-18-26">
+            Focused on making the little stuff better, we’re driven to create custom built
+            products that reflect our unique point of view, our heritage, our style, and we don’t
+            stop until we get it right </p>
     </div>
-    <div class="card-container mt-4 kenny-container" id="featured-watches">
-
-    </div>
+    <div class="d-flex justify-content-center align-items-center mt-4 kenny-container px-0" id="featured-watches"></div>
 </div>
-
+<div class="d-flex justify-content-center align-items-center store-locator-banner flex-column text-white link-plain">
+    <h2 class="section-header text-uppercase m-0">Store Locator</h2>
+    <p class="section-desc w-40-70-100 transform-none line-height-18-26 text-center my-4">
+        Only official Kennedy retailers are allowed to sell and maintain a Kennedy. With the necessary
+        skills, technical know-how and special equipment, they guarantee the authenticity of each and every part of your
+        Kennedy and help you make the choice that will last a lifetime.</p>
+    <a href="#" class="btn-input-lg text-white btn-outline-white
+                           w-25-70-100 font-weight-bold text-uppercase">Come find us</a>
+</div>
+<div class="d-flex justify-content-center align-items-center bg-dirty-white flex-column py-5">
+    <div class="d-flex justify-content-center align-items-center flex-column text-center wrap-top-30">
+        <h2 class="section-header text-uppercase">Discover Kennedy</h2>
+        <p class="section-desc w-40-70-100 transform-none text-muted line-height-18-26">
+            Here at Kennedy, we believe in maintaining long-standing commitments with exceptional individuals,
+            organizations, events and institutions in domains as varied as exploration,
+            sports, arts & culture, science, and education. </p>
+    </div>
+    <div class="d-flex justify-content-center align-items-center mt-4 kenny-container px-0" id="discover-kenny"></div>
+</div>
 <script type="text/javascript" src="/index.js"></script>
