--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,10 +11,10 @@
                            w-25-70-100 my-4 font-weight-bold">See our collections</a>
     </div>
 </div>
-<div class="d-flex justify-content-center align-self-center p-5 h-auto flex-column bg-dirty-white">
+<div class="d-flex justify-content-center align-self-center py-5 h-auto flex-column bg-dirty-white">
     <div class="d-flex justify-content-center align-items-center flex-column">
-        <h2 class="section-header">Witness Extravagance</h2>
-        <p class="section-desc">With the standouts from 2018 </p>
+        <h2 class="section-header text-uppercase">Witness Extravagance</h2>
+        <p class="section-desc transform-none text-muted">With the standouts from 2018 </p>
         <div class="d-flex justify-content-center align-items-center w-75-100 mb-5 link-plain">
             <a href="#" class="btn-input-lg text-white bg-black btn-outline-dark
                            w-25-70-100 font-weight-bold mx-2 text-uppercase">shop men's</a>
